<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            style="@style/thirdText"
            android:text="@string/question_8"/>
        <RadioGroup
            style="@style/firstPage"
            android:id="@+id/radioGroup">
            <RadioButton
                style="@style/firstPage"
                android:text="@string/Ans_a8"/>
            <RadioButton
                style="@style/firstPage"
                android:text="@string/Ans_b8"/>
            <RadioButton
                style="@style/firstPage"
                android:text="@string/Ans_c8"/>
            <RadioButton
                style="@style/firstPage"
                android:text="@string/Ans_d8"/>
        </RadioGroup>
        <TextView
            style="@style/secondText"
            android:text="@string/question_9"/>
        <CheckBox
            android:id="@+id/check_a"
            style="@style/fourText"
            android:text="@string/Ans_a9"
            />
        <CheckBox
            android:id="@+id/check_b"
            style="@style/fourText"
            android:text="@string/Ans_b9"/>
        <CheckBox
            android:id="@+id/check_c"
            style="@style/fourText"
            android:text="@string/Ans_c9"/>
        <CheckBox
            android:id="@+id/check_d"
            style="@style/fourText"
            android:text="@string/Ans_d9"/>
        <TextView
            style="@style/secondText"
            android:text="@string/question_4"/>
        <CheckBox
            android:id="@+id/check_4a"
            style="@style/fourText"
            android:text="@string/Ans_a4"/>
        <CheckBox
            android:id="@+id/check_4b"
            style="@style/fourText"
            android:text="@string/Ans_b4"/>
        <CheckBox
            android:id="@+id/check_4c"
            style="@style/fourText"
            android:text="@string/Ans_c4"/>
        <CheckBox
            android:id="@+id/check_4d"
            style="@style/fourText"
            android:text="@string/Ans_d9"/>
        <TextView
            style="@style/secondText"
            android:text="@string/question_2" />
        <EditText
            android:id="@+id/input_edit_text"
            style="@style/secondT"/>
        <Button
            android:id="@+id/btn_id"
            style="@style/btn"/>
    </LinearLayout>
</ScrollView>